--- a/Quantum Digital Signature.ipynb
+++ b/Quantum Digital Signature.ipynb
@@ -132,8 +132,8 @@
     "        d = 8\n",
     "        \n",
     "        return {\n",
-    "            'k0': [(randrange(2**n - 1), randrange(2**n - 1)) for i in range(d)],\n",
-    "            'k1': [(randrange(2**n - 1), randrange(2**n - 1)) for i in range(d)]\n",
+    "            'k0': [randrange(2**n - 1) for i in range(d)],\n",
+    "            'k1': [randrange(2**n - 1) for i in range(d)]\n",
     "        }\n",
     "    \n",
     "    # make M pairs of public keys (Quantum States)\n",
