--- a/Quantum_Hashing_Function.ipynb
+++ b/Quantum_Hashing_Function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff47ead1bd0>()>,\n",
-       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff47ead1bd0>()>]"
+       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff47ef55710>()>,\n",
+       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff47ef55710>()>]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,38 +49,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 2, 1]\n"
+      "[2, 1, 3]\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      \n",
-       "q6_0: \n",
+       "q9_0: \n",
        "      \n",
-       "q6_1: \n",
+       "q9_1: \n",
        "      \n",
-       "q6_2: \n",
+       "q9_2: \n",
        "      </pre>"
       ],
       "text/plain": [
        "      \n",
-       "q6_0: \n",
+       "q9_0: \n",
        "      \n",
-       "q6_1: \n",
+       "q9_1: \n",
        "      \n",
-       "q6_2: \n",
+       "q9_2: \n",
        "      "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
     "\n",
     "\n",
     "d = 3\n",
-    "bitstring = \"1001\"\n",
+    "bitstring = \"10001\"\n",
     "n = len(bitstring)\n",
     "big_N = 2**n\n",
     "\n",
@@ -120,31 +120,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ┌───┐\n",
-       "q6_0: ┤ H ├\n",
+       "q9_0: ┤ H ├\n",
        "      ├───┤\n",
-       "q6_1: ┤ H ├\n",
+       "q9_1: ┤ H ├\n",
        "      └───┘\n",
-       "q6_2: ─────\n",
+       "q9_2: ─────\n",
        "           </pre>"
       ],
       "text/plain": [
        "      ┌───┐\n",
-       "q6_0: ┤ H ├\n",
+       "q9_0: ┤ H ├\n",
        "      ├───┤\n",
-       "q6_1: ┤ H ├\n",
+       "q9_1: ┤ H ├\n",
        "      └───┘\n",
-       "q6_2: ─────\n",
+       "q9_2: ─────\n",
        "           "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,45 +158,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ┌───┐                                                                    »\n",
-       "q6_0: ┤ H ├─────o─────────■────────o────────■────────o─────────■─────────o─────»\n",
-       "      ├───┤     │         │        │        │        │         │         │     »\n",
-       "q6_1: ┤ H ├─────o─────────o────────■────────■────────o─────────o─────────■─────»\n",
-       "      └───┘┌────┴────┐┌───┴───┐┌───┴───┐┌───┴───┐┌───┴────┐┌───┴────┐┌───┴────┐»\n",
-       "q6_2: ─────┤ RY(π/2) ├┤ RY(π) ├┤ RY(π) ├┤ RY(π) ├┤ RY(4π) ├┤ RY(8π) ├┤ RY(8π) ├»\n",
-       "           └─────────┘└───────┘└───────┘└───────┘└────────┘└────────┘└────────┘»\n",
-       "«                \n",
-       "«q6_0: ────■─────\n",
-       "«          │     \n",
-       "«q6_1: ────■─────\n",
-       "«      ┌───┴────┐\n",
-       "«q6_2: ┤ RY(8π) ├\n",
-       "«      └────────┘</pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ┌───┐                                                                  »\n",
+       "q9_0: ┤ H ├─────o───────────■──────────o──────────■──────────o─────────■─────»\n",
+       "      ├───┤     │           │          │          │          │         │     »\n",
+       "q9_1: ┤ H ├─────o───────────o──────────■──────────■──────────o─────────o─────»\n",
+       "      └───┘┌────┴─────┐┌────┴────┐┌────┴────┐┌────┴────┐┌────┴────┐┌───┴────┐»\n",
+       "q9_2: ─────┤ RY(3π/4) ├┤ RY(π/2) ├┤ RY(π/2) ├┤ RY(π/4) ├┤ RY(12π) ├┤ RY(8π) ├»\n",
+       "           └──────────┘└─────────┘└─────────┘└─────────┘└─────────┘└────────┘»\n",
+       "«                          \n",
+       "«q9_0: ────o─────────■─────\n",
+       "«          │         │     \n",
+       "«q9_1: ────■─────────■─────\n",
+       "«      ┌───┴────┐┌───┴────┐\n",
+       "«q9_2: ┤ RY(8π) ├┤ RY(4π) ├\n",
+       "«      └────────┘└────────┘</pre>"
       ],
       "text/plain": [
-       "      ┌───┐                                                                    »\n",
-       "q6_0: ┤ H ├─────o─────────■────────o────────■────────o─────────■─────────o─────»\n",
-       "      ├───┤     │         │        │        │        │         │         │     »\n",
-       "q6_1: ┤ H ├─────o─────────o────────■────────■────────o─────────o─────────■─────»\n",
-       "      └───┘┌────┴────┐┌───┴───┐┌───┴───┐┌───┴───┐┌───┴────┐┌───┴────┐┌───┴────┐»\n",
-       "q6_2: ─────┤ RY(π/2) ├┤ RY(π) ├┤ RY(π) ├┤ RY(π) ├┤ RY(4π) ├┤ RY(8π) ├┤ RY(8π) ├»\n",
-       "           └─────────┘└───────┘└───────┘└───────┘└────────┘└────────┘└────────┘»\n",
-       "«                \n",
-       "«q6_0: ────■─────\n",
-       "«          │     \n",
-       "«q6_1: ────■─────\n",
-       "«      ┌───┴────┐\n",
-       "«q6_2: ┤ RY(8π) ├\n",
-       "«      └────────┘"
+       "      ┌───┐                                                                  »\n",
+       "q9_0: ┤ H ├─────o───────────■──────────o──────────■──────────o─────────■─────»\n",
+       "      ├───┤     │           │          │          │          │         │     »\n",
+       "q9_1: ┤ H ├─────o───────────o──────────■──────────■──────────o─────────o─────»\n",
+       "      └───┘┌────┴─────┐┌────┴────┐┌────┴────┐┌────┴────┐┌────┴────┐┌───┴────┐»\n",
+       "q9_2: ─────┤ RY(3π/4) ├┤ RY(π/2) ├┤ RY(π/2) ├┤ RY(π/4) ├┤ RY(12π) ├┤ RY(8π) ├»\n",
+       "           └──────────┘└─────────┘└─────────┘└─────────┘└─────────┘└────────┘»\n",
+       "«                          \n",
+       "«q9_0: ────o─────────■─────\n",
+       "«          │         │     \n",
+       "«q9_1: ────■─────────■─────\n",
+       "«      ┌───┴────┐┌───┴────┐\n",
+       "«q9_2: ┤ RY(8π) ├┤ RY(4π) ├\n",
+       "«      └────────┘└────────┘"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,11 +217,18 @@
     "            control_states = dec_to_bin(perm,d)            \n",
     "            i = sum(int(c) for c in control_states.strip())\n",
     "            Y_Rotate_Gate = RYGate(4*np.pi*K[i-1]*2**n_index/big_N).control(2, ctrl_state=control_states)\n",
-    "            qc_hash.append(Y_Rotate_Gate, qr)\n",
+    "            qc_hash.compose(Y_Rotate_Gate, qr, inplace=True)\n",
     "        \n",
     "\n",
     "qc_hash.draw()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
