Changed into Function

--- a/Quantum_Hashing_Function.ipynb
+++ b/Quantum_Hashing_Function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "from qiskit import Aer\n",
+    "from qiskit import Aer, execute\n",
     "\n",
     "from qiskit_ionq_provider import IonQProvider \n",
     "\n",
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff47ef55710>()>,\n",
-       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff47ef55710>()>]"
+       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff689204450>()>,\n",
+       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff689204450>()>]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,47 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 1, 3]\n"
+      "[1, 2, 0]\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      \n",
-       "q9_0: \n",
-       "      \n",
-       "q9_1: \n",
-       "      \n",
-       "q9_2: \n",
-       "      </pre>"
-      ],
-      "text/plain": [
-       "      \n",
-       "q9_0: \n",
-       "      \n",
-       "q9_1: \n",
-       "      \n",
-       "q9_2: \n",
-       "      "
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -95,133 +63,103 @@
     "#qc.append(c3h_gate, qr)\n",
     "\n",
     "\n",
-    "d = 3\n",
-    "bitstring = \"10001\"\n",
-    "n = len(bitstring)\n",
-    "big_N = 2**n\n",
     "\n",
+    "#Test input\n",
+    "bitstring = \"10001\"\n",
     "# Generating Key to Use\n",
     "K = []\n",
-    "for key in range(d):\n",
-    "    K += [randint(0,d)]  \n",
+    "for key in range(3):\n",
+    "    K += [randint(0,3)]  \n",
     "    \n",
     "print(K)\n",
     "\n",
-    "qr = QuantumRegister(d)\n",
-    "qc_hash = QuantumCircuit(qr)\n",
     "\n",
+    "def crypto_hash_init(bitstring, K):\n",
     "\n",
-    "\"\"\"for index in range(n):\n",
-    "    if int(bitstring[index]):\n",
-    "        qc_hash.x(index)\n",
-    "   \"\"\"     \n",
-    "qc_hash.draw()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ┌───┐\n",
-       "q9_0: ┤ H ├\n",
-       "      ├───┤\n",
-       "q9_1: ┤ H ├\n",
-       "      └───┘\n",
-       "q9_2: ─────\n",
-       "           </pre>"
-      ],
-      "text/plain": [
-       "      ┌───┐\n",
-       "q9_0: ┤ H ├\n",
-       "      ├───┤\n",
-       "q9_1: ┤ H ├\n",
-       "      └───┘\n",
-       "q9_2: ─────\n",
-       "           "
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for i in range(d-1):\n",
-    "    qc_hash.h(i)\n",
+    "    d = len(K)\n",
+    "    n = len(bitstring)\n",
+    "    big_N = 2**n\n",
+    "\n",
+    "    qr = QuantumRegister(d)\n",
+    "    qc_hash = QuantumCircuit(qr)\n",
     "    \n",
-    "qc_hash.draw()"
+    "    return (qc_hash, qr)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crypto_hash_add_H(bitstring, K, qc_hash):\n",
+    "    for i in range(d-1):\n",
+    "        qc_hash.h(i)\n",
+    "    \n",
+    "    return qc_hash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crypto_hash_final(bitstring, K, qc_hash, qr):\n",
+    "    def dec_to_bin(x,d):\n",
+    "        output = str(int(bin(x)[2:]))\n",
+    "        if len(output) < d-1:\n",
+    "            zeros = (\"0\" * (d-1-len(output)))\n",
+    "            return zeros + output\n",
+    "        else:\n",
+    "            return output\n",
+    "\n",
+    "    for n_index in range(1,n+1):\n",
+    "        control_states = \"0\" * (d-1)\n",
+    "        if int(bitstring[n_index-1]) == 1:\n",
+    "            for perm in range(0,2**(d-1)):     \n",
+    "                control_states = dec_to_bin(perm,d)            \n",
+    "                i = sum(int(c) for c in control_states.strip())\n",
+    "                Y_Rotate_Gate = RYGate(4*np.pi*K[i-1]*2**n_index/big_N).control(2, ctrl_state=control_states)\n",
+    "                qc_hash.compose(Y_Rotate_Gate, qr, inplace=True)\n",
+    "        \n",
+    "    return qc_hash\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crypto_hash(bitstring, K):\n",
+    "    (qc, qr) = crypto_hash_init(bitstring, K)\n",
+    "    qc = crypto_hash_add_H(bitstring, K, qc)\n",
+    "    qc_hash = crypto_hash_final(bitstring, K, qc, qr)\n",
+    "    \n",
+    "    backend = Aer.get_backend('statevector_simulator')\n",
+    "    state = execute(qc,backend).result().get_statevector()\n",
+    "    return(state)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ┌───┐                                                                  »\n",
-       "q9_0: ┤ H ├─────o───────────■──────────o──────────■──────────o─────────■─────»\n",
-       "      ├───┤     │           │          │          │          │         │     »\n",
-       "q9_1: ┤ H ├─────o───────────o──────────■──────────■──────────o─────────o─────»\n",
-       "      └───┘┌────┴─────┐┌────┴────┐┌────┴────┐┌────┴────┐┌────┴────┐┌───┴────┐»\n",
-       "q9_2: ─────┤ RY(3π/4) ├┤ RY(π/2) ├┤ RY(π/2) ├┤ RY(π/4) ├┤ RY(12π) ├┤ RY(8π) ├»\n",
-       "           └──────────┘└─────────┘└─────────┘└─────────┘└─────────┘└────────┘»\n",
-       "«                          \n",
-       "«q9_0: ────o─────────■─────\n",
-       "«          │         │     \n",
-       "«q9_1: ────■─────────■─────\n",
-       "«      ┌───┴────┐┌───┴────┐\n",
-       "«q9_2: ┤ RY(8π) ├┤ RY(4π) ├\n",
-       "«      └────────┘└────────┘</pre>"
-      ],
-      "text/plain": [
-       "      ┌───┐                                                                  »\n",
-       "q9_0: ┤ H ├─────o───────────■──────────o──────────■──────────o─────────■─────»\n",
-       "      ├───┤     │           │          │          │          │         │     »\n",
-       "q9_1: ┤ H ├─────o───────────o──────────■──────────■──────────o─────────o─────»\n",
-       "      └───┘┌────┴─────┐┌────┴────┐┌────┴────┐┌────┴────┐┌────┴────┐┌───┴────┐»\n",
-       "q9_2: ─────┤ RY(3π/4) ├┤ RY(π/2) ├┤ RY(π/2) ├┤ RY(π/4) ├┤ RY(12π) ├┤ RY(8π) ├»\n",
-       "           └──────────┘└─────────┘└─────────┘└─────────┘└─────────┘└────────┘»\n",
-       "«                          \n",
-       "«q9_0: ────o─────────■─────\n",
-       "«          │         │     \n",
-       "«q9_1: ────■─────────■─────\n",
-       "«      ┌───┴────┐┌───┴────┐\n",
-       "«q9_2: ┤ RY(8π) ├┤ RY(4π) ├\n",
-       "«      └────────┘└────────┘"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.00000000e-01+0.j 4.61939766e-01+0.j 4.61939766e-01+0.j\n",
+      " 3.53553391e-01+0.j 1.27125422e-17+0.j 1.91341716e-01+0.j\n",
+      " 1.91341716e-01+0.j 3.53553391e-01+0.j]\n"
+     ]
     }
    ],
-   "source": [
-    "def dec_to_bin(x,d):\n",
-    "    output = str(int(bin(x)[2:]))\n",
-    "    if len(output) < d-1:\n",
-    "        zeros = (\"0\" * (d-1-len(output)))\n",
-    "        return zeros + output\n",
-    "    else:\n",
-    "        return output\n",
-    "\n",
-    "for n_index in range(1,n+1):\n",
-    "    control_states = \"0\" * (d-1)\n",
-    "    if int(bitstring[n_index-1]) == 1:\n",
-    "        for perm in range(0,2**(d-1)):     \n",
-    "            control_states = dec_to_bin(perm,d)            \n",
-    "            i = sum(int(c) for c in control_states.strip())\n",
-    "            Y_Rotate_Gate = RYGate(4*np.pi*K[i-1]*2**n_index/big_N).control(2, ctrl_state=control_states)\n",
-    "            qc_hash.compose(Y_Rotate_Gate, qr, inplace=True)\n",
-    "        \n",
-    "\n",
-    "qc_hash.draw()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
