--- a/Quantum_Hashing_Function.ipynb
+++ b/Quantum_Hashing_Function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff689204450>()>,\n",
-       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff689204450>()>]"
+       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff68904ee90>()>,\n",
+       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7ff68904ee90>()>]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,17 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from random import randint\n",
@@ -61,17 +53,6 @@
     "from qiskit.circuit.library.standard_gates import RYGate\n",
     "#c3h_gate = RYGate(np.pi).control(2, ctrl_state='00')\n",
     "#qc.append(c3h_gate, qr)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#Test input\n",
-    "bitstring = \"10001\"\n",
-    "# Generating Key to Use\n",
-    "K = []\n",
-    "for key in range(3):\n",
-    "    K += [randint(0,3)]  \n",
-    "    \n",
-    "print(K)\n",
     "\n",
     "\n",
     "def crypto_hash_init(bitstring, K):\n",
@@ -89,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,19 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5.00000000e-01+0.j 4.61939766e-01+0.j 4.61939766e-01+0.j\n",
-      " 3.53553391e-01+0.j 1.27125422e-17+0.j 1.91341716e-01+0.j\n",
-      " 1.91341716e-01+0.j 3.53553391e-01+0.j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
