Updating Hash coefficient to 1

--- a/Quantum_Hashing_Function.ipynb
+++ b/Quantum_Hashing_Function.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "            for perm in range(0,2**(d-1)):     \n",
     "                control_states = dec_to_bin(perm,d)\n",
     "                i = sum(int(c) for c in control_states.strip())\n",
-    "                Y_Rotate_Gate = RYGate(4*np.pi*K[i-1]*2**n_index/big_N).control(d-1, ctrl_state=control_states)\n",
+    "                Y_Rotate_Gate = RYGate(np.pi*K[i-1]*2**n_index/big_N).control(d-1, ctrl_state=control_states)\n",
     "                qc_hash.compose(Y_Rotate_Gate, qr, inplace=True)\n",
     "        \n",
     "    return qc_hash\n"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,49 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "11\n",
-      "2\n",
-      "00\n",
-      "3\n",
-      "01\n",
-      "3\n",
-      "10\n",
-      "3\n",
-      "11\n",
-      "3\n",
-      "00\n",
-      "3\n",
-      "01\n",
-      "3\n",
-      "10\n",
-      "3\n",
-      "11\n",
-      "3\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([-5.00000000e-01+0.j, -5.00000000e-01+0.j, -5.00000000e-01+0.j,\n",
-       "       -5.00000000e-01+0.j,  1.83697020e-16-0.j,  1.83697020e-16-0.j,\n",
-       "        1.83697020e-16-0.j,  1.28587914e-15+0.j])"
+       "array([ 3.53553391e-01+0.j, -3.53553391e-01+0.j, -3.53553391e-01+0.j,\n",
+       "       -1.32691167e-16+0.j,  3.53553391e-01+0.j,  3.53553391e-01+0.j,\n",
+       "        3.53553391e-01+0.j, -5.00000000e-01+0.j])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto_hash(3,[1,7,1])"
+    "crypto_hash(3, [1,2,3])"
    ]
   },
   {
