Quantu,_hash_log(d,2)

--- a/Quantum_Hashing_Function.ipynb
+++ b/Quantum_Hashing_Function.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "from qutip import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from math import log\n",
     "\n",
     "from qiskit import Aer, execute\n",
     "\n",
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7f463b426090>()>,\n",
-       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7f463b426090>()>]"
+       "[<IonQSimulatorBackend('ionq_simulator') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7f4bbfdc6110>()>,\n",
+       " <IonQQPUBackend('ionq_qpu') from <qiskit_ionq_provider.ionq_provider.IonQProvider object at 0x7f4bbfdc6110>()>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
     "    \n",
     "    \n",
     "\n",
-    "    qr = QuantumRegister(d)\n",
+    "    qr = QuantumRegister(int(log(d,2)))\n",
     "    qc_hash = QuantumCircuit(qr)\n",
     "    \n",
     "    return (qc_hash, qr, d, bitstring, n, big_N)\n",
@@ -82,12 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def crypto_hash_add_H(qc_hash, qr, d, bitstring, n, big_N):\n",
-    "    for i in range(d-1):\n",
+    "    for i in range(int(log(d,2))-1):\n",
     "        qc_hash.h(i)\n",
     "    \n",
     "    return qc_hash"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,10 +103,12 @@
     "    for n_index in range(1,n+1):\n",
     "        control_states = \"0\" * (d-1)\n",
     "        if int(bitstring[n_index-1]) == 1:\n",
-    "            for perm in range(0,2**(d-1)):     \n",
-    "                control_states = dec_to_bin(perm,d)\n",
+    "            for perm in range(0,d):     \n",
+    "                control_states = dec_to_bin(perm,int(log(d,2)))\n",
+    "                print(control_states)\n",
+    "                print(int(log(d,2)))\n",
     "                i = sum(int(c) for c in control_states.strip())\n",
-    "                Y_Rotate_Gate = RYGate(np.pi*K[i-1]*2**n_index/big_N).control(d-1, ctrl_state=control_states)\n",
+    "                Y_Rotate_Gate = RYGate(np.pi*K[i-1]*2**n_index/(big_N)).control(int(log(d,2))-1, ctrl_state=control_states)\n",
     "                qc_hash.compose(Y_Rotate_Gate, qr, inplace=True)\n",
     "        \n",
     "    return qc_hash\n"
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,31 +126,66 @@
     "    qc_hash = crypto_hash_final(qc, qr, d, bitstring, n, big_N, K)\n",
     "    \n",
     "    backend = Aer.get_backend('statevector_simulator')\n",
-    "    state = execute(qc,backend).result().get_statevector()\n",
+    "    state = execute(qc_hash,backend).result().get_statevector()\n",
     "    return(state)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "1\n",
+      "2\n",
+      "input number needed to be cut to fit parameters\n",
+      "0\n",
+      "2\n",
+      "input number needed to be cut to fit parameters\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "2\n",
+      "1\n",
+      "2\n",
+      "input number needed to be cut to fit parameters\n",
+      "0\n",
+      "2\n",
+      "input number needed to be cut to fit parameters\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "2\n",
+      "1\n",
+      "2\n",
+      "input number needed to be cut to fit parameters\n",
+      "0\n",
+      "2\n",
+      "input number needed to be cut to fit parameters\n",
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([ 3.53553391e-01+0.j, -3.53553391e-01+0.j, -3.53553391e-01+0.j,\n",
-       "       -1.32691167e-16+0.j,  3.53553391e-01+0.j,  3.53553391e-01+0.j,\n",
-       "        3.53553391e-01+0.j, -5.00000000e-01+0.j])"
+       "array([ 5.00000000e-01-6.12323400e-17j, -3.08640211e-16-8.65956056e-17j,\n",
+       "       -5.00000000e-01+6.12323400e-17j, -7.07106781e-01+8.65956056e-17j])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto_hash(3, [1,2,3])"
+    "crypto_hash(7, [2,8,2,1])"
    ]
   },
   {
