--- a/Quantum_Hashing_Function.ipynb
+++ b/Quantum_Hashing_Function.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -149,43 +149,22 @@
       "2\n",
       "input number needed to be cut to fit parameters\n",
       "1\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "1\n",
-      "2\n",
-      "input number needed to be cut to fit parameters\n",
-      "0\n",
-      "2\n",
-      "input number needed to be cut to fit parameters\n",
-      "1\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "1\n",
-      "2\n",
-      "input number needed to be cut to fit parameters\n",
-      "0\n",
-      "2\n",
-      "input number needed to be cut to fit parameters\n",
-      "1\n",
       "2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ 5.00000000e-01-6.12323400e-17j, -3.08640211e-16-8.65956056e-17j,\n",
-       "       -5.00000000e-01+6.12323400e-17j, -7.07106781e-01+8.65956056e-17j])"
+       "array([0.70710678+0.j, 0.70710678+0.j, 0.        +0.j, 0.        +0.j])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto_hash(7, [2,8,2,1])"
+    "crypto_hash(1, [2,8,2,1])"
    ]
   },
   {
